Feat: 사진첩 무한루프 및 가로 스크롤 구현

--- a/Week1/Homework/index.html
+++ b/Week1/Homework/index.html
@@ -19,16 +19,16 @@
       </div>
       <div class="header-right">
         <a href="https://github.com/hello-yujin" target="_blank">
-            <img src="./images/github.png" alt="github" />
+          <img src="./images/github.png" alt="github" />
         </a>
         <a href="https://www.linkedin.com/in/yujin-lilly-jung/" target="_blank">
-            <img src="./images/linkedin.png" alt="linkedin" />
+          <img src="./images/linkedin.png" alt="linkedin" />
         </a>
         <a href="https://www.instagram.com/u_.zzn/" target="_blank">
-            <img src="./images/instagram.webp" alt="instagram" />
+          <img src="./images/instagram.webp" alt="instagram" />
         </a>
         <a href="https://velog.io/@hello-yujin/posts" target="_blank">
-            <img src="./images/velog.webp" alt="velog" />
+          <img src="./images/velog.webp" alt="velog" />
         </a>
       </div>
     </header>
@@ -88,7 +88,7 @@
           <p>여자아이돌 무대보는게 취미입니다!</p>
           <span class="heart">♥</span>
         </div>
-          <div class="card">
+        <div class="card">
           <img src="./images/food.jpeg" alt="food" />
           <h3>Food Fighter 🥊</h3>
           <p>맛있는거 먹는 낙으로 삽니다!</p>
@@ -97,17 +97,28 @@
       </div>
     </section>
 
-    <!-- Photos 섹션 -->
+    <!--  Photos 섹션 -->
     <section class="photos-section" id="photos-section">
       <h2>사진첩 📸</h2>
       <div class="scroll-container">
-        <img src="./images/photo1.jpeg" alt="사진1" />
-        <img src="./images/photo2.jpeg" alt="사진2" />
-        <img src="./images/photo3.jpeg" alt="사진3" />
-        <img src="./images/photo4.jpeg" alt="사진4" />
-        <img src="./images/photo5.jpeg" alt="사진5" />
-        <img src="./images/photo6.png" alt="사진6" />
-        <img src="./images/photo7.jpeg" alt="사진7" />
+        <div class="scroll-track">
+          <img src="./images/photo1.jpeg" alt="사진1" />
+          <img src="./images/photo2.jpeg" alt="사진2" />
+          <img src="./images/photo3.jpeg" alt="사진3" />
+          <img src="./images/photo4.jpeg" alt="사진4" />
+          <img src="./images/photo5.jpeg" alt="사진5" />
+          <img src="./images/photo6.png"  alt="사진6" />
+          <img src="./images/photo7.jpeg" alt="사진7" />
+
+          <!-- 무한 루프를 위한 복제 -->
+          <img src="./images/photo1.jpeg" alt="사진1" />
+          <img src="./images/photo2.jpeg" alt="사진2" />
+          <img src="./images/photo3.jpeg" alt="사진3" />
+          <img src="./images/photo4.jpeg" alt="사진4" />
+          <img src="./images/photo5.jpeg" alt="사진5" />
+          <img src="./images/photo6.png"  alt="사진6" />
+          <img src="./images/photo7.jpeg" alt="사진7" />
+        </div>
       </div>
     </section>
 
