Feat: 히어로(소개) 섹션 요소 배치 재구성

--- a/Week1/Homework/index.html
+++ b/Week1/Homework/index.html
@@ -36,11 +36,13 @@
     <!-- Greeting 섹션 -->
     <section class="greeting-section" id="greeting-section">
       <img src="./images/profile.jpeg" alt="profile" class="greeting-profile" />
-      <h2>안녕하세요<br>저는 37기 정유진입니다!</h2>
-      <p>열심히 공부해서 함께 성장하고 싶습니다 🌱</p>
-      <div class="greeting-buttons">
-        <button>블로그 보기</button>
-        <button>연락하기</button>
+      <div class="greeting-content">
+          <h2>안녕하세요<br>저는 37기 정유진입니다!</h2>
+          <p>열심히 공부해서 함께 성장하고 싶습니다 🌱</p>
+          <div class="greeting-buttons">
+              <button>블로그 보기</button>
+              <button>연락하기</button>
+          </div>
       </div>
     </section>
 
