Refactor: 클래스명 변경

--- a/Week1/Homework/index.html
+++ b/Week1/Homework/index.html
@@ -33,13 +33,13 @@
       </div>
     </header>
 
-    <!-- Greeting 섹션 -->
-    <section class="greeting-section" id="greeting-section">
-      <img src="./images/profile.jpeg" alt="profile" class="greeting-profile" />
-      <div class="greeting-content">
+    <!-- Introduce 섹션 -->
+    <section class="introduce-section" id="introduce-section">
+      <img src="./images/profile.jpeg" alt="profile" class="introduce-profile" />
+      <div class="introduce-content">
           <h2>안녕하세요<br>저는 37기 정유진입니다!</h2>
           <p>열심히 공부해서 함께 성장하고 싶습니다 🌱</p>
-          <div class="greeting-buttons">
+          <div class="introduce-buttons">
               <button>블로그 보기</button>
               <button>연락하기</button>
           </div>
@@ -56,8 +56,8 @@
       </div>
     </section>
 
-    <!-- Introduce 섹션 -->
-    <section class="introduce-section" id="introduce-section">
+    <!-- Card 섹션 -->
+    <section class="card-section" id="card-section">
       <h2>유진이의 일상 👯‍♀️</h2>
       <div class="card-list">
         <div class="card">
