Refactor: 클래스명 수정에 따른 Nav 경로 수정

--- a/Week1/Homework/index.html
+++ b/Week1/Homework/index.html
@@ -126,10 +126,10 @@
 
     <!-- 사이드 Nav -->
     <nav class="side-nav">
-      <a href="#greeting">인사</a>
-      <a href="#tags">태그</a>
-      <a href="#introduce">소개</a>
-      <a href="#photos">사진첩</a>
+      <a href="#introduce-section">인사</a>
+      <a href="#tags-section">태그</a>
+      <a href="#card-section">소개</a>
+      <a href="#photos-section">사진첩</a>
       <a href="#footer">한마디</a>
     </nav>
 
