Feat: 한마디 섹션 추가

--- a/Week1/Homework/index.html
+++ b/Week1/Homework/index.html
@@ -124,6 +124,12 @@
       </div>
     </section>
 
+    <!-- 한마디 섹션 -->
+    <section class="quote-section" id="quote-section">
+      <h2>한마디 ✨</h2>
+      <p>후회하지 않도록 항상 최선을 다하자!</p>
+    </section>
+
     <!-- 사이드 Nav -->
     <nav class="side-nav">
       <a href="#introduce-section">인사</a>
