Feat: 코드 리뷰 1차 반영

--- a/Week1/Homework/index.html
+++ b/Week1/Homework/index.html
@@ -37,7 +37,8 @@
     <section class="introduce-section" id="introduce-section">
       <img src="./images/profile.jpeg" alt="profile" class="introduce-profile" />
       <div class="introduce-content">
-          <h2>안녕하세요<br>저는 37기 정유진입니다!</h2>
+          <h2>안녕하세요</h2>
+          <h2>저는 37기 정유진입니다!</h2>
           <p>열심히 공부해서 함께 성장하고 싶습니다 🌱</p>
           <div class="introduce-buttons">
               <button>블로그 보기</button>
@@ -104,22 +105,22 @@
       <h2>사진첩 📸</h2>
       <div class="scroll-container">
         <div class="scroll-track">
-          <img src="./images/photo1.jpeg" alt="사진1" />
-          <img src="./images/photo2.jpeg" alt="사진2" />
-          <img src="./images/photo3.jpeg" alt="사진3" />
-          <img src="./images/photo4.jpeg" alt="사진4" />
-          <img src="./images/photo5.jpeg" alt="사진5" />
-          <img src="./images/photo6.png"  alt="사진6" />
-          <img src="./images/photo7.jpeg" alt="사진7" />
+          <img src="./images/photo1.jpeg" alt="couple" />
+          <img src="./images/photo2.jpeg" alt="uheungcon" />
+          <img src="./images/photo3.jpeg" alt="exhibit" />
+          <img src="./images/photo4.jpeg" alt="fashion" />
+          <img src="./images/photo5.jpeg" alt="shopping" />
+          <img src="./images/photo6.png"  alt="coding" />
+          <img src="./images/photo7.jpeg" alt="matcha" />
 
           <!-- 무한 루프를 위한 복제 -->
-          <img src="./images/photo1.jpeg" alt="사진1" />
-          <img src="./images/photo2.jpeg" alt="사진2" />
-          <img src="./images/photo3.jpeg" alt="사진3" />
-          <img src="./images/photo4.jpeg" alt="사진4" />
-          <img src="./images/photo5.jpeg" alt="사진5" />
-          <img src="./images/photo6.png"  alt="사진6" />
-          <img src="./images/photo7.jpeg" alt="사진7" />
+          <img src="./images/photo1.jpeg" alt="couple" />
+          <img src="./images/photo2.jpeg" alt="uheungcon" />
+          <img src="./images/photo3.jpeg" alt="exhibit" />
+          <img src="./images/photo4.jpeg" alt="fashion" />
+          <img src="./images/photo5.jpeg" alt="shopping" />
+          <img src="./images/photo6.png"  alt="coding" />
+          <img src="./images/photo7.jpeg" alt="matcha" />
         </div>
       </div>
     </section>
