Feat: 코드 리뷰 3차 반영

--- a/Week1/Homework/index.html
+++ b/Week1/Homework/index.html
@@ -64,7 +64,7 @@
         <div class="card">
           <img src="./images/band.jpeg" alt="band" />
           <h3>Band 🎤</h3>
-          <p>학교에서 밴드 동아리를<br>4년째 하고 있습니다!</p>
+          <p>학교에서 밴드 동아리를 4년째 하고 있습니다!</p>
           <span class="heart">♥</span>
         </div>
         <div class="card">
@@ -76,7 +76,7 @@
         <div class="card">
           <img src="./images/part-time-job.jpeg" alt="part-time-job" />
           <h3>Part-time Job 🥨</h3>
-          <p>연남동에 있는 빵집에서<br>2년째 알바하고 있습니다!</p>
+          <p>연남동에 있는 빵집에서 2년째 알바하고 있습니다!</p>
           <span class="heart">♥</span>
         </div>
         <div class="card">
