Feat: 코드 리뷰 5차 반영

--- a/Week1/Homework/index.html
+++ b/Week1/Homework/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <!-- Introduce 섹션 -->
-    <section class="introduce-section" id="introduce-section">
+    <section id="introduce-section">
       <img src="./images/profile.jpeg" alt="profile" class="introduce-profile" />
       <div class="introduce-content">
           <h2>안녕하세요</h2>
@@ -48,7 +48,7 @@
     </section>
 
     <!-- Tags 섹션 -->
-    <section class="tags-section" id="tags-section">
+    <section id="tags-section">
       <h2>About 유진 💖</h2>
       <div class="tags">
         <span>Js</span><span>Ts</span><span>React</span><span>Next.js</span>
@@ -58,7 +58,7 @@
     </section>
 
     <!-- Card 섹션 -->
-    <section class="card-section" id="card-section">
+    <section id="card-section">
       <h2>유진이의 일상 👯‍♀️</h2>
       <div class="card-list">
         <div class="card">
@@ -101,7 +101,7 @@
     </section>
 
     <!--  Photos 섹션 -->
-    <section class="photos-section" id="photos-section">
+    <section id="photos-section">
       <h2>사진첩 📸</h2>
       <div class="scroll-container">
         <div class="scroll-track">
@@ -126,7 +126,7 @@
     </section>
 
     <!-- 한마디 섹션 -->
-    <section class="quote-section" id="quote-section">
+    <section id="quote-section">
       <h2>한마디 ✨</h2>
       <p>후회하지 않도록 항상 최선을 다하자!</p>
     </section>
