Feat: 멤버 데이터 초기화 기능 구현

--- a/Week2/Homework/index.html
+++ b/Week2/Homework/index.html
@@ -82,6 +82,7 @@
         <h2 class="card__title">37기 웹 파트 목록</h2>
 
         <div class="table-head__right">
+          <button class="btn btn--ghost" id="resetSeedBtn" title="멤버 데이터를 다시 주입">멤버 데이터 초기화</button>
           <button class="btn btn--danger" id="deleteSelectedBtn">선택 삭제</button>
           <button class="btn btn--primary" id="openAddModalBtn">추가</button>
         </div>
